api-resources/ingress/ngx-ns-config.yml
# create namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
