api-resources/ingress/ingress.yml
# ingress class
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
  # name: ngx-ink

# spec:
  # controller: nginx.org/ingress-controller
# ---

# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngx-ingress

spec:

  ingressClassName: nginx

  rules:
  - host: ngx.test
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: ngx-svc
            port:
              number: 80
